@@ -374,6 +374,20 @@ You can use the overrides.xml to warn the user before they delete any particular
 [action] - The action of the existing shortcut that will trigger this message when the user tries to delete/replace it, or edit its action
 
 
+11. Force Settings Link
+
+When using Skin Shortcuts to provide the whole main menu, it is possible for the user to delete the link to settings. This would leave them in a position where they are unable to further edit the menu to put it back.
+
+It is recommended that you provide an alternative access to settings somewhere in your skin, such as the power menu. However, if you do not, then it is possible to force the script to add a Settings option to the end of the main menu, if there is no other link to settings in the menu structure.
+
+<?xml version="1.0" encoding="UTF-8"?>
+<overrides>
+	<forcesettings>True</forcesettings>
+</overrides>
+
+Please note, this will cause the script to create a shortcut with the action ActivateWindow(Settings) if none exists. It doesn't look for any other settings area links. It also doesn't take into account any overrides or visibility conditions that may be attached to a shortcut.
+
+
 Localisation
 ------------
 
